# kkpView-public

./: .gitignore  .gitmodules  README.md  imgui.ini  kkp.cpp  kkp.h  kkpViewer.sln  kkpViewer.vcxproj  kkpViewer.vcxproj.filters  main.cpp  main.h  meson.build  platform.h  profont.h  version.h  window.cpp  window.h
.github/workflows/: build-on-push.yml  build-release.yml
ExeToKKPUncompressed/: ExeToKKPUncompressed.cpp  ExeToKKPUncompressed.vcxproj
platform/: dx11.cpp  sdl3.cpp
